; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tditest/tditest/extr_tditest.c_TdiUnload.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tditest/tditest/extr_tditest.c_TdiUnload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_TRACE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"Setting stop flag\0A\00", align 1
@SendThread = common dso_local global i32 0, align 4
@THREAD_ALL_ACCESS = common dso_local global i32 0, align 4
@KernelMode = common dso_local global i32 0, align 4
@ReceiveThread = common dso_local global i32 0, align 4
@StopEvent = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@Executive = common dso_local global i32 0, align 4
@TdiTransport = common dso_local global i32 0, align 4
@TdiTransportObject = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @TdiUnload(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 0, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* @MAX_TRACE, align 4
  %7 = call i32 @TDI_DbgPrint(i32 %6, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* @SendThread, align 4
  %9 = load i32, i32* @THREAD_ALL_ACCESS, align 4
  %10 = load i32, i32* @KernelMode, align 4
  %11 = call i32 @ObReferenceObjectByHandle(i32 %8, i32 %9, i32* null, i32 %10, i32* %5, i32* null)
  %12 = load i32, i32* @ReceiveThread, align 4
  %13 = load i32, i32* @THREAD_ALL_ACCESS, align 4
  %14 = load i32, i32* @KernelMode, align 4
  %15 = call i32 @ObReferenceObjectByHandle(i32 %12, i32 %13, i32* null, i32 %14, i32* %4, i32* null)
  %16 = load i32, i32* @FALSE, align 4
  %17 = call i32 @KeSetEvent(i32* @StopEvent, i32 0, i32 %16)
  %18 = load i32, i32* %5, align 4
  %19 = load i32, i32* @Executive, align 4
  %20 = load i32, i32* @KernelMode, align 4
  %21 = load i32, i32* @FALSE, align 4
  %22 = call i32 @KeWaitForSingleObject(i32 %18, i32 %19, i32 %20, i32 %21, i32* null)
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* @Executive, align 4
  %25 = load i32, i32* @KernelMode, align 4
  %26 = load i32, i32* @FALSE, align 4
  %27 = call i32 @KeWaitForSingleObject(i32 %23, i32 %24, i32 %25, i32 %26, i32* null)
  %28 = load i32, i32* @TdiTransport, align 4
  %29 = load i32, i32* @TdiTransportObject, align 4
  %30 = call i32 @TdiCloseDevice(i32 %28, i32 %29)
  %31 = load i32, i32* %2, align 4
  ret i32 %31
}

declare dso_local i32 @TDI_DbgPrint(i32, i8*) #1

declare dso_local i32 @ObReferenceObjectByHandle(i32, i32, i32*, i32, i32*, i32*) #1

declare dso_local i32 @KeSetEvent(i32*, i32, i32) #1

declare dso_local i32 @KeWaitForSingleObject(i32, i32, i32, i32, i32*) #1

declare dso_local i32 @TdiCloseDevice(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
